# inkwell

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  SECURITY.md  TODO.md  index.html  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
inkwell-updater/: package-lock.json  package.json  wrangler.toml
inkwell-updater/src/: index.ts
inkwell-worker/: DEPLOY.md  package-lock.json  package.json  wrangler.toml
inkwell-worker/src/: index.ts
public/: overlay.html
research/: RESEARCH-INDEX.md  model-catalog-research.md  voice-agent-integration.md
research/raw/: 01-ai-polish.md  02-chainable-transforms.md  03-per-app-styles.md  04-snippets.md  05-voice-commands.md  06-file-transcription.md  07-export.md  08-streaming.md  09-landing-page.md
scripts/: download-models.ps1
src/: App.tsx  index.css  types.ts
src-tauri/: .tauri-private.key.pub  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  appdetect.rs  audio.rs  commands.rs  dictionary.rs  engine.rs  export.rs  filetranscribe.rs  history.rs  lib.rs  llm.rs  overlay.rs  paste.rs  pipeline.rs  polish.rs  recording.rs  settings.rs  setup.rs  snippets.rs  sounds.rs  style.rs  tray.rs  usage.rs  vad.rs  voicecommand.rs
src-tauri/tests/: pipeline_tests.rs
src/components/: InkCanvas.tsx  Onboarding.tsx  StatusBar.tsx  TabBar.tsx
src/tabs/: AITab.tsx  AboutTab.tsx  AgentTab.tsx  index.ts  (+9 more)
(+7 files in other folders)
