[package]
name = "app"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
cpal = "0.17"
ringbuf = "0.4"
tauri-plugin-global-shortcut = "2.3.1"
hound = "3.5.1"
rubato = "0.16"
sherpa-onnx = { version = "1.12", default-features = false, features = ["static"] }
arboard = "3"
enigo = "0.3"
rusqlite = { version = "0.33", features = ["bundled"] }
csv = "1"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
keyring = "3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
aho-corasick = "1"
symphonia = { version = "0.5", features = ["mp3", "wav", "flac", "ogg", "aac", "isomp4", "mkv", "pcm", "vorbis", "alac"] }
